--- a/static/admin/login.html
+++ b/static/admin/login.html
@@ -34,7 +34,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" data-dismiss="modal" class="close"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title">Login to OpenI-Daschboard.com</h4>
+          <h4 class="modal-title">Login to OPENi-Daschboard.com</h4>
         </div>
         <div class="modal-body">
           <div class="row">
